--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -1535,7 +1535,7 @@
 "import_from_facebook_started" = "Comenzó la transferencia desde Facebook.";
 "instapick_hashtags_copied" = "Se copiaron los hashtags.";
 "create_story_selection_limit" = "Por favor seleccionar la foto %d máxima";
-"etk_html" = "";
+"etk_html" = "<p><strong>MENSAJE ELECTRÓNICO COMERCIAL Y CONSENTIMIENTO DE DATOS</strong></p>\n<p>Por la presente, doy mi consentimiento para permitir que Lifecell Bulut Çözümleri A. Ş., Lifecell Dijital Servisler ve Çözümler A. Ş. y las Empresas del Grupo enumeradas a continuación para procesar mis datos personales y compartirlos con las partes enumeradas en la Política de Permisos y enviarme mensajes electrónicos comerciales de acuerdo con la \"Política de Permisos\" disponible en <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/izin-politikasi\">aquí</a> a menos que yo solicite lo contrario de acuerdo con la Ley No. 6563 y demás normativa aplicable con la finalidad de informarme sobre descuentos, ofertas y promociones especiales, que se ajusten a mis necesidades y preferencias con respecto a los productos y servicios de estas empresas. Reconozco que puedo revocar mi consentimiento para el procesamiento/intercambio de mis datos personales o para recibir correos electrónicos comerciales, y la información detallada sobre el alcance y la revocación de dicho consentimiento está disponible dentro del alcance de \"<a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/izin-politikasi\">Política de Permisos</a>\".</p>\n<table>\n<tbody>\n<tr>\n<td width=\"532\">\n<p><strong><u>Empresas Del Grupo Con Permiso Para Compartir/Procesar Datos</u></strong></p>\n</td>\n</tr>\n<tr>\n<td width=\"532\"> \n<p>Lifecell Dijital Servisler ve Çözümler A.Ş.</p> \n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Lifecell Müzik Yayın ve İletim A.Ş.</p> \n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Lifecell TV Yayın ve İçerik Hizmetleri Anonim Şirketi</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Lifecell Bulut Çözümleri A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Lifecell İletişim Teknolojileri ve Dijital Servisler A.Ş.</p> \n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Turktell Bilişim Servisleri A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p><strong><u>Empresas Del Grupo Con Permiso De Comunicación Comercial</u></strong></p>\n</td> \n</tr> \n<tr> \n<td width=\"532\"> \n<p>Turktell Bilişim Servisleri A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Global Bilgi Pazarlama Danışma ve Çağrı Servisi Hizmetleri A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Turkcell Finansman A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Turkcell Ödeme ve Elektronik Para Hizmetleri A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Turkcell Sigorta Aracılık Hizmetleri A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Turkcell Teknoloji Araştırma ve Geliştirme A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Turkcell Satış ve Dağıtım Hizmetleri A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Turkcell Enerji Çözümleri ve Elektrik Satış Ticaret A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Lifecell Müzik Yayın ve İletim A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Lifecell TV Yayın ve İçerik Hizmetleri Anonim Şirketi</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Lifecell Bulut Çözümleri A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Lifecell İletişim Teknolojileri ve Dijital Servisler A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Lifecell Dijital Servisler ve Çözümler A.Ş</p>\n</td>\n</tr>\n</tbody>\n</table>";
 "free_up_space_alert_title" = "Crear espacio en tu teléfono";
 "free_up_space_no_duplicates" = "No tienes foto / video repetitivos.";
 "free_up_space_in_progress" = "Todavía no está preparado tu lista de archivos repetitivos, por favor volver a probarlo más tarde.";
@@ -2044,4 +2044,18 @@
 "ETK_KVKK_Izin_Politikasi" = "Política de Permisos";
 "kvkk_firms_link" = "";
 "kvkk_commercial_info_link" = "";
+"syncing" = "";
+"downloading" = "";
 "ETK_KVKK_Izin_Politikası" = "";
+
+/*Free for {3 months}
+then {11,99 TRY/Month}*/
+"iap_intro_offer_free_trial" = "";
+
+/*First {6 months} {6,99 TRY/Month}
+then {11,99 TRY/Month}*/
+"iap_intro_offer_pay_as_you_go" = "";
+
+/*First {6 months} {6,99 TRY}
+then {11,99 TRY/Month}*/
+"iap_intro_offer_pay_up_front" = "";
