--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -1798,7 +1798,7 @@ Please check I have understood the intended command here*/
 "import_from_facebook_started" = "Le transfert depuis Facebook a commencé.";
 "instapick_hashtags_copied" = "Les mots-clic ont été copiés.";
 "create_story_selection_limit" = "Veuillez sélectionner au maximum %d photos.";
-"etk_html" = "";
+"etk_html" = "<p><strong>CONSENTEMENT AUX COMMUNICATIONS ÉLECTRONIQUES COMMERCIALES ET AUX TRANSFERTS DE DONNÉES</strong></p>\n<p>Je consens par la présente à autoriser Lifecell Bulut Çözümleri A. Ş., Lifecell Dijital Servisler ve Çözümler A. Ş. et les Sociétés du Groupe énumérées ci-dessous pour traiter mes données personnelles et les partager avec les parties énumérées dans la Politique d'autorisation et m'envoyer des messages électroniques commerciaux conformément à la \"Politique d'autorisation\" disponible à l'adresse <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/izin-politikasi\">ici</a> sauf demande contraire de ma part conformément à la loi No. 6563 et autres réglementations applicables dans le but de m'informer des remises, offres et offres spéciales, qui sont conformes à mes besoins et préférences concernant les produits et services de ces sociétés. Je reconnais que je peux révoquer mon consentement au traitement/partage de mes données personnelles ou à la réception de courriers électroniques commerciaux et des informations détaillées sur la portée et la révocation de ce consentement sont disponibles dans le cadre de la \"<a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/izin-politikasi\">Politique d'autorisation</a>\".</p>\n<table>\n<tbody>\n<tr>\n<td width=\"532\">\n<p><strong><u>Groupe d'entreprises autorisé à traiter/partager des données</u></strong></p>\n</td>\n</tr>\n<tr>\n<td width=\"532\"> \n<p>Lifecell Dijital Servisler ve Çözümler A.Ş.</p> \n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Lifecell Müzik Yayın ve İletim A.Ş.</p> \n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Lifecell TV Yayın ve İçerik Hizmetleri Anonim Şirketi</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Lifecell Bulut Çözümleri A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Lifecell İletişim Teknolojileri ve Dijital Servisler A.Ş.</p> \n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Turktell Bilişim Servisleri A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p><strong><u>Groupe d'entreprises autorisé à communications commerciales</u></strong></p>\n</td> \n</tr> \n<tr> \n<td width=\"532\"> \n<p>Turktell Bilişim Servisleri A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Global Bilgi Pazarlama Danışma ve Çağrı Servisi Hizmetleri A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Turkcell Finansman A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Turkcell Ödeme ve Elektronik Para Hizmetleri A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Turkcell Sigorta Aracılık Hizmetleri A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Turkcell Teknoloji Araştırma ve Geliştirme A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Turkcell Satış ve Dağıtım Hizmetleri A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Turkcell Enerji Çözümleri ve Elektrik Satış Ticaret A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Lifecell Müzik Yayın ve İletim A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Lifecell TV Yayın ve İçerik Hizmetleri Anonim Şirketi</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Lifecell Bulut Çözümleri A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Lifecell İletişim Teknolojileri ve Dijital Servisler A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Lifecell Dijital Servisler ve Çözümler A.Ş</p>\n</td>\n</tr>\n</tbody>\n</table>";
 "free_up_space_alert_title" = "Libérez de l'espace sur votre téléphone";
 "free_up_space_no_duplicates" = "Vous n'avez pas de photos / vidéos récurrents";
 "free_up_space_in_progress" = "Votre liste de dossiers récurrents n'est pas encore prête, veuillez réessayer plus tard.";
@@ -2307,4 +2307,18 @@ Please check I have understood the intended command here*/
 "ETK_KVKK_Izin_Politikasi" = "Politique d'autorisation";
 "kvkk_firms_link" = "";
 "kvkk_commercial_info_link" = "";
+"syncing" = "";
+"downloading" = "";
 "ETK_KVKK_Izin_Politikası" = "";
+
+/*Free for {3 months}
+then {11,99 TRY/Month}*/
+"iap_intro_offer_free_trial" = "";
+
+/*First {6 months} {6,99 TRY/Month}
+then {11,99 TRY/Month}*/
+"iap_intro_offer_pay_as_you_go" = "";
+
+/*First {6 months} {6,99 TRY}
+then {11,99 TRY/Month}*/
+"iap_intro_offer_pay_up_front" = "";
