--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -1493,7 +1493,7 @@
 "import_from_facebook_started" = "Transferul de pe Facebook a început.";
 "instapick_hashtags_copied" = "Hashtag-urile au fost copiate.";
 "create_story_selection_limit" = "Te rugăm să selectați maximum %d fotografii.";
-"etk_html" = "";
+"etk_html" = "<p><strong>MESAJ ELECTRONIC COMERCIAL ȘI CONSIMȚĂMÂNT DE DATE</strong></p>\n<p>Prin prezenta sunt de acord pentru a permite Lifecell Bulut Çözümleri A.Ş, Lifecell Dijital Servisler ve Çözümler A.Ş. și Companiile de Grup enumerate mai jos pentru a procesa datele mele personale și a le împărtăși părților enumerate în Politica de Permisiune și pentru a-mi trimite mesaje electronice comerciale în conformitate cu \"Politica de Permisiune\" disponibilă la <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/izin-politikasi\">aici</a> dacă nu mi se solicită altfel conform Legii nr. 6563 și alte reglementări aplicabile în scopul de a mă informa cu privire la reduceri, oferte și oferte speciale, care sunt în conformitate cu nevoile și preferințele mele cu privire la produsele și serviciile acestor companii. Recunosc că îmi pot revoca consimțământul pentru prelucrarea/partajarea datelor mele personale sau pentru primirea de e-mailuri electronice comerciale și informații detaliate privind domeniul de aplicare și revocarea unui astfel de consimțământ sunt disponibile în domeniul de aplicare al \"<a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/izin-politikasi\">Politica de Permisiune</a>\".</p>\n<table>\n<tbody>\n<tr>\n<td width=\"532\">\n<p><strong><u>Grup de companii care i s-a acordat permisiunea de a procesa/partaja date</u></strong></p>\n</td>\n</tr>\n<tr>\n<td width=\"532\"> \n<p>Lifecell Dijital Servisler ve Çözümler A.Ş.</p> \n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Lifecell Müzik Yayın ve İletim A.Ş.</p> \n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Lifecell TV Yayın ve İçerik Hizmetleri Anonim Şirketi</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Lifecell Bulut Çözümleri A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Lifecell İletişim Teknolojileri ve Dijital Servisler A.Ş.</p> \n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Turktell Bilişim Servisleri A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p><strong><u>Grup de companii care au acordat comunicări comerciale</u></strong></p>\n</td> \n</tr> \n<tr> \n<td width=\"532\"> \n<p>Turktell Bilişim Servisleri A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Global Bilgi Pazarlama Danışma ve Çağrı Servisi Hizmetleri A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Turkcell Finansman A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Turkcell Ödeme ve Elektronik Para Hizmetleri A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Turkcell Sigorta Aracılık Hizmetleri A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Turkcell Teknoloji Araştırma ve Geliştirme A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Turkcell Satış ve Dağıtım Hizmetleri A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Turkcell Enerji Çözümleri ve Elektrik Satış Ticaret A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Lifecell Müzik Yayın ve İletim A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Lifecell TV Yayın ve İçerik Hizmetleri Anonim Şirketi</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Lifecell Bulut Çözümleri A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Lifecell İletişim Teknolojileri ve Dijital Servisler A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Lifecell Dijital Servisler ve Çözümler A.Ş</p>\n</td>\n</tr>\n</tbody>\n</table>";
 "free_up_space_alert_title" = "Eliberează spațiu pe telefon";
 "free_up_space_no_duplicates" = "Nu există fotografii / videoclipuri repetate.";
 "free_up_space_in_progress" = "Lista ta de fișiere repetate nu este încă pregătită, încercați mai târziu";
@@ -2002,4 +2002,18 @@
 "ETK_KVKK_Izin_Politikasi" = "Politica de Permisiuni";
 "kvkk_firms_link" = "";
 "kvkk_commercial_info_link" = "";
+"syncing" = "";
+"downloading" = "";
 "ETK_KVKK_Izin_Politikası" = "";
+
+/*Free for {3 months}
+then {11,99 TRY/Month}*/
+"iap_intro_offer_free_trial" = "";
+
+/*First {6 months} {6,99 TRY/Month}
+then {11,99 TRY/Month}*/
+"iap_intro_offer_pay_as_you_go" = "";
+
+/*First {6 months} {6,99 TRY}
+then {11,99 TRY/Month}*/
+"iap_intro_offer_pay_up_front" = "";
