--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -1495,7 +1495,7 @@
 "import_from_facebook_started" = "Почалася передача з Facebook.";
 "instapick_hashtags_copied" = "Хештеги скопійовані.";
 "create_story_selection_limit" = "Виберіть максимально %d фотографій.";
-"etk_html" = "";
+"etk_html" = "<p><strong>ЗГОДА НА КОМЕРЦІЙНІ ЕЛЕКТРОННІ ПОВІДОМЛЕННЯ І ПЕРЕДАЧУ ДАНИХ</strong></p>\n<p>Цим Я даю згоду дозволити Lifecell Bulut Çözümleri A. Ş., Lifecell Dijital Servisler ve Çözümler A. Ş і компаніям групи, переліченим нижче, обробляти мої персональні дані і передавати їх сторонам, зазначеним у Політиці Дозволів, і відправляти мені комерційні електронні повідомлення відповідно до \"Політики Дозволів\" доступні <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/izin-politikasi\">тут</a> якщо я не вимагаю іншого відповідно до Закону №. 6563 та інші застосовні правила з метою інформування мене про знижки, пропозиції та спеціальні пропозиції, які відповідають моїм потребам і перевагам щодо продуктів і послуг цих компаній. Я визнаю, що я можу відкликати свою згоду на обробку/передачу моїх персональних даних або отримання комерційних електронних листів, і детальна інформація про обсяг і відкликання такої згоди доступна в рамках\"<a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/izin-politikasi\"> Політика Дозволів</a>\" .</p>\n<table>\n<tbody>\n<tr>\n<td width=\"532\">\n<p><strong><u>Група Компаній з Дозволом на Обробку/Обмін Даними</u></strong></p>\n</td>\n</tr>\n<tr>\n<td width=\"532\"> \n<p>Lifecell Dijital Servisler ve Çözümler A.Ş.</p> \n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Lifecell Müzik Yayın ve İletim A.Ş.</p> \n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Lifecell TV Yayın ve İçerik Hizmetleri Anonim Şirketi</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Lifecell Bulut Çözümleri A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Lifecell İletişim Teknolojileri ve Dijital Servisler A.Ş.</p> \n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Turktell Bilişim Servisleri A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p><strong><u>Група Компаній з Дозволом на Комерційний Зв'язок</u></strong></p>\n</td> \n</tr> \n<tr> \n<td width=\"532\"> \n<p>Turktell Bilişim Servisleri A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Global Bilgi Pazarlama Danışma ve Çağrı Servisi Hizmetleri A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Turkcell Finansman A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Turkcell Ödeme ve Elektronik Para Hizmetleri A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Turkcell Sigorta Aracılık Hizmetleri A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Turkcell Teknoloji Araştırma ve Geliştirme A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Turkcell Satış ve Dağıtım Hizmetleri A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Turkcell Enerji Çözümleri ve Elektrik Satış Ticaret A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Lifecell Müzik Yayın ve İletim A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Lifecell TV Yayın ve İçerik Hizmetleri Anonim Şirketi</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Lifecell Bulut Çözümleri A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Lifecell İletişim Teknolojileri ve Dijital Servisler A.Ş.</p>\n</td>\n</tr>\n<tr>\n<td width=\"532\">\n<p>Lifecell Dijital Servisler ve Çözümler A.Ş</p>\n</td>\n</tr>\n</tbody>\n</table>";
 "free_up_space_alert_title" = "Звільніть місце на телефоні";
 "free_up_space_no_duplicates" = "У вас немає фото / відео, які повторюються";
 "free_up_space_in_progress" = "Ваш список повторюваних файлів ще не готовий, будь ласка, спробуйте пізніше.";
@@ -2004,4 +2004,18 @@
 "ETK_KVKK_Izin_Politikasi" = "Політика Дозволів";
 "kvkk_firms_link" = "";
 "kvkk_commercial_info_link" = "";
+"syncing" = "";
+"downloading" = "";
 "ETK_KVKK_Izin_Politikası" = "";
+
+/*Free for {3 months}
+then {11,99 TRY/Month}*/
+"iap_intro_offer_free_trial" = "";
+
+/*First {6 months} {6,99 TRY/Month}
+then {11,99 TRY/Month}*/
+"iap_intro_offer_pay_as_you_go" = "";
+
+/*First {6 months} {6,99 TRY}
+then {11,99 TRY/Month}*/
+"iap_intro_offer_pay_up_front" = "";
