--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -2039,3 +2039,9 @@ then {11,99 TRY/Month}*/
 /*First {6 months} {6,99 TRY}
 then {11,99 TRY/Month}*/
 "iap_intro_offer_pay_up_front" = "İlk %@ %@\nSonraki Aylar %@";
+
+/*Paycell Campaign*/
+"settings_item_paycell" = "Marka Elçisi Ol";
+"title_paycell_link" = "Size Özel Davet Linki";
+"title_paycell_createlink" = "Link Oluştur";
+"title_paycell_campaign" = "Kampanya detayları";
