--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -2019,3 +2019,9 @@ then {11,99 TRY/Month}*/
 /*First {6 months} {6,99 TRY}
 then {11,99 TRY/Month}*/
 "iap_intro_offer_pay_up_front" = "Перший %@ %@\nНаступні Місяці %@";
+
+/*Paycell Campaign*/
+"settings_item_paycell" = "";
+"title_paycell_link" = "";
+"title_paycell_createlink" = "";
+"title_paycell_campaign" = "";
