--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -2059,3 +2059,15 @@ then {11,99 TRY/Month}*/
 /*First {6 months} {6,99 TRY}
 then {11,99 TRY/Month}*/
 "iap_intro_offer_pay_up_front" = "Primero %@ %@\nMeses Subsiguientes %@";
+
+/*Paycell Campaign*/
+"settings_item_paycell" = "Conviértase en Embajador de la Marca lifebox";
+"title_paycell_link" = "Enlace Especial Para Ti";
+"title_paycell_createlink" = "Crear Enlace";
+"title_paycell_campaign" = "Condiciones de la Campaña";
+"paycell_share_message " = "";
+"title_paycell_total" = "";
+"title_paycell_subtitle" = "";
+"title_paycell_friends" = "";
+"paycell_share_message" = "";
+"beeline_cancel_TC" = "";
