--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -2062,7 +2062,13 @@ then {11,99 TRY/Month}*/
 "iap_intro_offer_pay_up_front" = "Së pari %@ %@\nMuajt pasues %@";
 
 /*Paycell Campaign*/
-"settings_item_paycell" = "";
-"title_paycell_link" = "";
-"title_paycell_createlink" = "";
-"title_paycell_campaign" = "";
+"settings_item_paycell" = "Bëhuni një Përfaqësues i Markës së lifebox";
+"title_paycell_link" = "Lidhje Special Për Ju";
+"title_paycell_createlink" = "Krijo Lidhje";
+"title_paycell_campaign" = "Kushtet e Kampanjës";
+"paycell_share_message " = "";
+"title_paycell_total" = "";
+"title_paycell_subtitle" = "";
+"title_paycell_friends" = "";
+"paycell_share_message" = "";
+"beeline_cancel_TC" = "";
