--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -2031,7 +2031,13 @@ then {11,99 TRY/Month}*/
 "iap_intro_offer_pay_up_front" = "الأول %@ %@\nالتالي %@";
 
 /*Paycell Campaign*/
-"settings_item_paycell" = "";
-"title_paycell_link" = "";
-"title_paycell_createlink" = "";
-"title_paycell_campaign" = "";
+"settings_item_paycell" = "كن سفيرًا للعلامة التجارية  lifebox";
+"title_paycell_link" = "رابط مشاركة خاص لك";
+"title_paycell_createlink" = "إنشاء رابط";
+"title_paycell_campaign" = "شروط الحملة";
+"paycell_share_message " = "";
+"title_paycell_total" = "";
+"title_paycell_subtitle" = "";
+"title_paycell_friends" = "";
+"paycell_share_message" = "";
+"beeline_cancel_TC" = "";
