--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -2324,7 +2324,13 @@ then {11,99 TRY/Month}*/
 "iap_intro_offer_pay_up_front" = "Première %@ %@\nProchains Mois %@";
 
 /*Paycell Campaign*/
-"settings_item_paycell" = "";
-"title_paycell_link" = "";
-"title_paycell_createlink" = "";
-"title_paycell_campaign" = "";
+"settings_item_paycell" = "Devenez un Ambassadeur de Marque lifebox";
+"title_paycell_link" = "Lien Spécial Pour Vous";
+"title_paycell_createlink" = "Créer un Lien";
+"title_paycell_campaign" = "Conditions de la Campagne";
+"paycell_share_message " = "";
+"title_paycell_total" = "";
+"title_paycell_subtitle" = "";
+"title_paycell_friends" = "";
+"paycell_share_message" = "";
+"beeline_cancel_TC" = "";
