--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -2033,7 +2033,13 @@ then {11,99 TRY/Month}*/
 "iap_intro_offer_pay_up_front" = "Первый(ые) %@ %@\nПоследующие Месяцы %@";
 
 /*Paycell Campaign*/
-"settings_item_paycell" = "";
-"title_paycell_link" = "";
-"title_paycell_createlink" = "";
-"title_paycell_campaign" = "";
+"settings_item_paycell" = "Станьте Представителем Бренда lifebox";
+"title_paycell_link" = "Специальная Ссылка Для Вас";
+"title_paycell_createlink" = "Создать Ссылку";
+"title_paycell_campaign" = "Условия Кампании";
+"paycell_share_message " = "";
+"title_paycell_total" = "";
+"title_paycell_subtitle" = "";
+"title_paycell_friends" = "";
+"paycell_share_message" = "";
+"beeline_cancel_TC" = "";
