--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -2021,7 +2021,13 @@ then {11,99 TRY/Month}*/
 "iap_intro_offer_pay_up_front" = "Перший %@ %@\nНаступні Місяці %@";
 
 /*Paycell Campaign*/
-"settings_item_paycell" = "";
-"title_paycell_link" = "";
-"title_paycell_createlink" = "";
-"title_paycell_campaign" = "";
+"settings_item_paycell" = "Станьте Амбасадором Бренду lifebox";
+"title_paycell_link" = "Спеціальне Посилання Для Вас";
+"title_paycell_createlink" = "Створити Посилання";
+"title_paycell_campaign" = "Умови Кампанії";
+"paycell_share_message " = "";
+"title_paycell_total" = "";
+"title_paycell_subtitle" = "";
+"title_paycell_friends" = "";
+"paycell_share_message" = "";
+"beeline_cancel_TC" = "";
