--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -2050,6 +2050,6 @@ then {11,99 TRY/Month}*/
 "paycell_share_message " = "";
 "title_paycell_total" = "Kazandığın TL";
 "title_paycell_subtitle" = "Paycell Hediyesi";
-"title_paycell_friends" = "Davetini Kabul Edenler ( %@ Kişi)";
+"title_paycell_friends" = "Davetini Kabul Edenler ( %d Kişi)";
 "paycell_share_message" = "lifebox Marka Elçisi Programına dahil oldum. Programa özel lifebox 6 aylık 250GB Premium paketine aşağıdaki linke tıklarak sadece 59.99TL’ye sahip olabilirsin. Fırsatı kaçırma 😊";
 "beeline_cancel_TC" = "Beeline";
