--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -2023,9 +2023,9 @@ then {11,99 TRY/Month}*/
 "title_paycell_link" = "Link Special Pentru Tine";
 "title_paycell_createlink" = "Creați Link";
 "title_paycell_campaign" = "Condiții de Campanie";
+"title_paycell_total" = "Sold Câștigat Paycell";
+"title_paycell_subtitle" = "Soldul Paysell";
+"title_paycell_friends" = "Persoane Care Au Cumpărat Pachetul (%d Persoane)";
+"paycell_share_message" = "M-am alăturat Programului de Ambasador al Mărcii lifebox. Puteți obține un pachet lifebox Premium de 6 luni de 250 GB la un preț redus făcând clic pe linkul de mai jos. Nu rata ocazia 😊";
+"beeline_cancel_TC" = "Vă puteți anula sau gestiona abonamentul lifebox din aplicația Beeline.";
 "paycell_share_message " = "";
-"title_paycell_total" = "";
-"title_paycell_subtitle" = "";
-"title_paycell_friends" = "";
-"paycell_share_message" = "";
-"beeline_cancel_TC" = "";
