--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -2077,5 +2077,7 @@ then {11,99 TRY/Month}*/
 "title_paycell_subtitle" = "Paycell Reload";
 "title_paycell_friends" = "People Who Bought the Package (%d People)";
 "paycell_share_message" = "I joined the lifebox Brand Ambassador Program. You can have the program-specific lifebox 6-month 250GB Premium package for discounted price by clicking the link below. Don't miss it 😊";
-"beeline_cancel_TC" = "Beeline";
+
+/*Fuzzy*/
+"beeline_cancel_TC" = "You can cancel or manage your lifebox subscription from the Beeline Application.";
 "paycell_share_message " = "You have been sent 5GB of lifebox storage, click to redeem";
